PU Dashboard finalize